# SDL2_C

./: CMakeLists.txt  README.md
src/: common.h  draw.c  draw.h  init.c  init.h  input.c  input.h  main.c  structs.h
